src/objects/Account_Plans__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_Identifier__c</fullName>
        <label>BU Identifier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_Identifier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <formula>Account__r.Customer_Group__c</formula>
        <label>Customer Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <label>Account Plans</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plans Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Access_Set__c</fullName>
        <label>Access Set</label>
    </sharingReasons>
    <validationRules>
        <fullName>RestrictAccountPlanCreate</fullName>
        <active>true</active>
        <errorConditionFormula>IF((VALUE( TEXT( Year__c ) ) &gt;  YEAR( TODAY() )+2) ||(VALUE( TEXT(  Year__c  ) )  &lt;  YEAR( TODAY() )-2) , true, false)</errorConditionFormula>
        <errorMessage>Account Plan cannot be created for more/Less than 2 years from the current year.</errorMessage>
    </validationRules>
</CustomObject>